<resources>
    <string name="app_name">LoginApp</string>
    <string name="stage2">STAGE 2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerCaption">Don\'t have an account? Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="signUp">Sign Up</string>
    <string name="loginCaption">Already have account? Login</string>
</resources>
